--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-scripts": "5.0.1",
     "react-spinners": "^0.13.7",
     "react-toastify": "^9.1.1",
+    "swiper": "^8.4.6",
     "uuid": "^9.0.0",
     "web-vitals": "^2.1.4"
   },
